# FastTest

./: .gitignore  CMakeLists.txt  README.md  log1.txt
Strats/: LinReg.ipynb
Strats/.ipynb_checkpoints/: LinReg-checkpoint.ipynb
data/: A.csv  AAL.csv  AAP.csv  AAPL.csv
include/: Account.h  Asset.h  Broker.h  Exchange.h  FastTest.h  FastTestLib.h  Order.h  Position.h  Strategy.h  Test.h  utils_time.h  utils_vector.h
src/: Account.cpp  Asset.cpp  Asset.py  Broker.cpp  Broker.py  Exchange.cpp  Exchange.py  FastTest.cpp  FastTest.py  FastTestLib.cpp  Order.cpp  Order.py  Position.cpp  Position.py  Strategy.cpp  Strategy.py  dllmain.cpp  main.py  utils_time.cpp  utils_vector.cpp
src/c++/: Asset.cpp  Asset.h  Broker.cpp  Broker.h  Exchange.cpp  Exchange.h  FastTest.cpp  FastTest.h  FastTest.vcxproj  FastTest.vcxproj.filters  FastTestLib.cpp  FastTestLib.h  Order.cpp  Order.h  Posi.h  Position.cpp  Position.h  Strategy.cpp  Strategy.h  Test.h  cpp.hint  main.cpp  test3_A_US.csv  test_asset.cpp  test_broker.cpp  test_exchange.cpp  test_ft.cpp  test_strategies.cpp  test_strategy.cpp  utils_time.cpp  utils_time.h
src/wrapper/: Asset.py  Broker.py  Exchange.py  FastTest.py  LibWrapper.py  Order.py  Strategy.py  Wrapper.py
tests/: log1.txt  simple_short_test.py  simple_test.py  test_agis.ipynb  test_ma_cross.ipynb
tests/data/: AAPL.csv  test1.csv  test2.csv
tests/logs/: log1.txt
wrapper/: Account.py  Broker.py  Exchange.py  FastTest.py  Order.py  Strategy.py  Wrapper.py
wrapper/__pycache__/: FastTest.run_jit-192.py39.1.nbc  FastTest.run_jit-192.py39.nbi
(+16 files in other folders)
